src/test/deca/context/invalid/homemade/tests/test337_type_op_unaire/test337_type_unaire8.deca
// test invalide de la règle 3.37

{
    int a = !true;
}
